--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
 PORT=3000
 DB_HOST=localhost
 DB_USER=postgres
-DB_PASSWORD=your_password
+DB_PASSWORD=.
 DB_NAME=cartel_coches
 DB_PORT=5432
 CORS_ORIGIN=http://localhost:5173
